Bug 133462 - VIEWING: invisible cursor in the SQL command textbox
Summary: VIEWING: invisible cursor in the SQL command textbox
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-05-27 21:03 UTC by libre officer
Modified: 2020-06-16 15:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description libre officer 2020-05-27 21:03:32 UTC
Description:
After opening the SQL dialog and typing something, the cursor is invisible.

Steps to Reproduce:
1. open a new database or create one.
2. go to : Tools -> SQL... 
3. click the "Command to execute" textbox
4. try to type something (or not)

Actual Results:
Cursor invisible.

Expected Results:
The cursor should be visible like in the textboxes "Status" and "Output".


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Version: 7.0.0.0.alpha1 (x64)
Build ID: 6a03b2a54143a9bc0c6d4c7f190b77cdc5a14733
CPU threads: 4; OS: Windows 10.0 Build 17763; UI render: Skia/Raster; VCL: win; 
Locale: fr-FR (fr_FR); UI: en-GB
Calc: threaded
Comment 1 Xisco Faulí 2020-06-03 09:48:53 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c2f8929ed76085bc81f390f90e06bd6781206537

author	Ashod Nakashian <ashod.nakashian@collabora.co.uk>	2019-05-29 23:33:25 -0400
committer	Michael Meeks <michael.meeks@collabora.com>	2019-12-18 01:50:41 +0100
commit c2f8929ed76085bc81f390f90e06bd6781206537 (patch)
tree 57861cb7462411f16a4eff3705616e23d97846df
parent 9e63d328691014bc97f6b66b708ed9dec53618e6 (diff)
vcl: sfx2: LOK: Support per-view popup windows

Bisected with: bibisect-linux64-6.5

Adding Cc: to Ashod Nakashian
Comment 2 Xisco Faulí 2020-06-03 09:49:22 UTC
@Caolán, i thought you might be interested in this issue
Comment 3 Caolán McNamara 2020-06-08 15:40:41 UTC
I can restore the piece that c2f8929ed76085bc81f390f90e06bd6781206537 clobbered, but I don't know if there is a real online case which required that piece or if it was a mismerge. The addition of vcl/source/window/msgbox.cxx by that commit makes it feel it was a complicated merge and maybe not intended to add the offending hunk where it ended up
Comment 4 Caolán McNamara 2020-06-08 15:41:07 UTC
https://gerrit.libreoffice.org/c/core/+/95844
Comment 5 Commit Notification 2020-06-09 18:40:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6db6163dad0d8ac21ba69b2e361034b06f0a5a30

tdf#133462 cursor missing in SQL textbox

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-06-09 18:40:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/802f242500bc3c0e0e47e5b6b7863b620195eac6

tdf#133462 cursor missing in SQL textbox

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-06-16 15:19:02 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 11d21b3c1f7754b5d13ae9ea88da562ec74366ff
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!