tdf#133462 cursor missing in SQL textbox

(and spell checking, calc page format header/footer dialog, etc)

since...

commit c2f8929ed76085bc81f390f90e06bd6781206537
Date:   Wed May 29 23:33:25 2019 -0400

    vcl: sfx2: LOK: Support per-view popup windows

I feel this is a mismerge where the point of

commit b9c10ee923308f336a694bbc0212396ed5317b6a
Date:   Wed Apr 3 12:02:13 2019 +0100

    weld ClassificationDialog

to allow cursor drawing to a non-Window OutputDevice got clobbered

Change-Id: If693fd0ee83afc6e7f0ddce7b43b8cb6e3327116